<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_Home"
            android:title="@string/nav_menu_home" />


        <item android:title="@string/nav_menu_Assessemt">
            <menu>
                <item
                    android:id="@+id/nav_UpcomingAssessment"
                    android:title="@string/nav_menu_Upcoming" />
                <item
                    android:id="@+id/nav_OngoingAssessment"
                    android:title="@string/nav_menu_Ongoing" />
                <item
                    android:id="@+id/nav_PastAssessment"
                    android:title="@string/nav_menu_Past" />
            </menu>
        </item>
        <item android:title="">
            <menu>
                <item android:id="@+id/nav_logout"
                    android:title="@string/nav_menu_logout"/>
            </menu>
        </item>


    </group>
</menu>